# AsyncECS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitflag.cpp  bitflag.h  component.cpp  component.h  entity.cpp  entity.h  main.cpp  notification.h  reactive_system.cpp  reactive_system.h  registry.cpp  registry.h  view.h
tests/: CMakeLists.txt  TestComponents.h  bitflagTests.cpp  entityTests.cpp  main.cpp  registryAsyncOperationsTests.cpp  registrySyncOperationsTests.cpp  viewTests.cpp
